Correction of bugs

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css' />
 </head>
 <body id="body">
-    <form id="form1" runat="server">
         <div class="container-fluid">
             <div class="container div-topo">
                 <div class="row">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-8">
-                        <asp:Image ID="imgProfile" runat="server" src="./images/doug-social.jpg" CssClass="img-responsive img-circle" />
+                        <img ID="imgProfile" src="./images/doug-social.jpg" class="img-responsive img-circle" />
                         <p class="name">Douglas dos Santos Oliveira</p>
                         <p class="name">Web Developer</p>
                         <p class="email"><span class="glyphicon glyphicon-envelope emailspan"></span>&nbsp douglas-rhs@hotmail.com</p>
@@ -25,17 +24,17 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/douglas.santos.oliveira1" target="blank">
-                                    <asp:Image ID="ImgFb" runat="server" src="./images/Facebook.png" CssClass="img-sociais img-circle" />
+                                    <img ID="ImgFb" src="./images/Facebook.png" class="img-sociais img-circle" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/douglas-santos-0a3771101?trk=nav_responsive_tab_profile" target="_blank">
-                                    <asp:Image ID="ImgLinkedin" runat="server" src="./images/Linkedin.png" CssClass="img-sociais img-circle" />
+                                    <img ID="ImgLinkedin" src="./images/Linkedin.png" CssClass="img-sociais img-circle" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/douglas_sts1/" target="_blank">
-                                    <asp:Image ID="ImgInstagram" runat="server" src="./images/Instagram.png" CssClass="img-sociais img-circle" />
+                                    <img ID="ImgInstagram" src="./images/Instagram.png" CssClass="img-sociais img-circle" />
                                 </a>
                             </li>
                         </ul>
@@ -127,6 +126,5 @@
             <p class="text-center">Copyright &copy 2016 Douglas Santos. All Rights Reserved.</p>
             <p class="footer-iceman text-center"></p>
         </div>
-    </form>
 </body>
 </html>
