Correction bugs part 2

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/douglas-santos-0a3771101?trk=nav_responsive_tab_profile" target="_blank">
-                                    <img ID="ImgLinkedin" src="./images/Linkedin.png" CssClass="img-sociais img-circle" />
+                                    <img ID="ImgLinkedin" src="./images/Linkedin.png" class="img-sociais img-circle" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/douglas_sts1/" target="_blank">
-                                    <img ID="ImgInstagram" src="./images/Instagram.png" CssClass="img-sociais img-circle" />
+                                    <img ID="ImgInstagram" src="./images/Instagram.png" class="img-sociais img-circle" />
                                 </a>
                             </li>
                         </ul>
