Hide phone number.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p id="pcontact" class="title-skills">Contato/Contact</p>
                     <div class="contact-div">
                         <p class="contact"><span class="glyphicon glyphicon-envelope emailspan"></span>&nbsp douglas-rhs@hotmail.com</p>
-                        <p class="contact"><span class="glyphicon glyphicon-earphone emailspan"></span>&nbsp (12) 98174-5089</p>
+                        <!-- <p class="contact"><span class="glyphicon glyphicon-earphone emailspan"></span>&nbsp (12) 98174-5089</p> -->
 
                     </div>
 
