--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title>&copy Douglas Santos</title>
+    <title>dev Douglas Santos</title>
     <link href="./css/myCss.css" rel="stylesheet" />
     <link href="./libs/bootstrap-3.3.6-dist/css/bootstrap.css" rel="stylesheet" />    
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css' />
@@ -9,32 +9,10 @@
     <link href="./images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/socialmedia.css">
-    <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/banner.css">        
 </head>
 <body class="container-fluid">
-    <header role="banner">
-        <nav id="navbar-primary" class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-primary-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar-primary-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#sobre">Sobre</a></li>
-                        <li><a href="#habilidades">Habilidades</a></li>
-                        <li><a href="#contato">Contato</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-    </header><!-- header role="banner" -->
-
+   
 
         <!-- os cara so porta lançamento -->
         <section class="container">
@@ -60,8 +38,9 @@
                                 <i class="fa fa-lg fa-instagram" /></i>
                             </a>                                
                         </li>
-                    </ul>
-                    <a id="linkCurriculo" class="btn btn-default" href="./images/CurrículoEndGta.pdf" target="_blank">Currículo.pdf</a>
+                    </ul><br/>
+                    <div class="col-md-12 col-sm-12 col-xs-12 text-center"> <a href="./images/curriculo.pdf" class="btn btn-sm btn-default" target="_blank">Currículo</a> </div>
+                    
                 </div><!-- div.social --> 
             </div>   <!-- div.col-sm-12 div-principal-->  
         </section><!-- section.principal-->
@@ -71,7 +50,7 @@
             <div class="col-md-5 col-sm-12 div-briefs shadow">
                 <p class="title-about-me">Sobre mim</p>
                 <p class="text-about-me">Olá, é sempre um prazer ter uma visita aqui, seja bem vindo, vou me apresentar brevemente, sou recém formado em Análise e Desenvolvimento de sistemas pela FATEC de Guaratinguetá(FATEC) onde tenho muito orgulho de ter estudado.</p>
-                <p class="text-about-me">Brasileiro, 23 anos de idade e atualmente morando em Guaratinguetá-SP, tenho como hobbies jogar basquete, andar de longboard, correr, nadar, curtir uma boa música, festivais e principalmente programar para web!</p>
+                <p class="text-about-me">Brasileiro, 24 anos de idade e atualmente morando em Guaratinguetá-SP, tenho como hobbies jogar basquete, andar de longboard, correr, nadar, curtir uma boa música, festivais e principalmente programar para web!</p>
                 <p class="text-about-me">Confeço que estou no início de minha carreira como desenvolvedor mas já sei que estou na profissão certa,</p>
                 <p class="text-about-me">sempre me dei bem com programação e eu sou um desenvolvedor web, mas afinal o que seria isso? </p>
                 <p class="text-about-me">Seria um profissional que desenvolve sites institucionais ou também aplicações web para um propósito específico.</p>
@@ -82,7 +61,7 @@
             <div class="col-md-5 col-sm-12 div-briefs shadow">
                     <p class="title-about-me">About me</p>
                     <p class="text-about-me">Hello, it is always a pleasure to have a visit here, welcome, I will introduce myself briefly, I am a recent graduate in Systems Analysis and Development by FATEC in Guaratinguetá (FATEC) where I am very proud to have studied.</p>
-                    <p class="text-about-me">Brazilian, 23 years old and currently living in Guaratinguetá-SP, I have hobbies like playing basketball, longboarding, running, swimming, enjoying good music, festivals and mainly programming for the web!</p>
+                    <p class="text-about-me">Brazilian, 24 years old and currently living in Guaratinguetá-SP, I have hobbies like playing basketball, longboarding, running, swimming, enjoying good music, festivals and mainly programming for the web!</p>
                     <p class="text-about-me">I confess that I'm at the beginning of my career as a developer but I already know that I'm in the right profession,</p>
                     <p class="text-about-me">I always got on well with programming and I'm a web developer, but what would that be?</p>
                     <p class="text-about-me">It would be a professional who develops institutional websites or also web applications for a specific purpose.</p>
@@ -151,6 +130,5 @@
         </footer><!-- footer.container  -->
         <p class="footer-iceman text-center">⛄</p>
     <script src="./libs/jquery/jquery-3.0.0.min.js"></script>
-    <script src="./scripts/myscript.js"></script>
 </body>
 </html>
